tests/typing/hints/literals/float.expected
File "tests/typing/hints/literals/float.smt2", line 2, character 11-21:
2 | (assert (= (_ bv13 8) bv10011100))
               ^^^^^^^^^^
Error Unbound identifier: `(_ bv13 8)`
Hint: The current logic does not include extended bitvector literals
