tests/typing/hints/literals/float.smt2
(set-logic QF_UF)
(assert (= (_ bv13 8) bv10011100))
(check-sat)
